--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.2.1",
     "axios": "^0.17.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
-    "material-design-lite": "^1.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
